--- a/third/package.json
+++ b/third/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "second-prac",
-  "version": "2.0.0",
+  "name": "third",
+  "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,11 @@
     "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^7.0.3",
-    "dotenv": "^16.4.7",
+    "hapi-auth-jwt2": "^11.0.0",
     "hapi-swagger": "^17.3.2",
-    "nodemon": "^3.1.9"
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.9",
+    "pg": "^8.14.1",
+    "short-uuid": "^5.2.0"
   }
 }
